coldfront is only for Torch!
	modified:   docs/hpc/01_getting_started/07_what_is_coldfront.mdx

--- a/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
+++ b/docs/hpc/01_getting_started/07_what_is_coldfront.mdx
@@ -3,6 +3,10 @@ import TabItem from '@theme/TabItem';
 
 # HPC project management portal
 
+:::warning[Only applicable to Torch]
+This section is only applicable to the Torch cluster!
+:::
+
 Coldfront is the HPC project and allocation management portal for Torch at NYU. You can access it by navigating to [coldfront.hpc.nyu.edu](https://coldfront.hpc.nyu.edu). With it you can:
 <Tabs>
   <TabItem value="PIs" label="PIs" default>
