torch resources update

--- a/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
+++ b/docs/hpc/01_getting_started/09_coldfront_requesting_an_allocation_request.mdx
@@ -21,13 +21,19 @@ After clicking "+Request Resource Allocation", you'll see a list of resources yo
 :::info Available resource for each school:
 <Tabs>
   <TabItem value="tandon" label="Tandon" default>
-    -   **tandon_advanced**: includes both A100 and H100 GPUs
-    -   **tandon_priority**: includes A100 GPUs only
+    -   **tandon_advanced**: includes both A100, H100 and H200 GPUs
+    -   **tandon_priority**: includes A100 and H100 GPUs
   </TabItem>
   <TabItem value="arts-sciences" label="Arts & Sciences">
     -   **cilvr**: A100 GPUs
-    -   **cds**: rtx8000 and A100
+    -   **cds**: rtx8000, A100 and H200 GPUs
     -   **chemistry**: A100 GPUs
+  </TabItem>
+  <TabItem value="courant" label="Courant Institute of Mathematical Sciences">
+    -   **courant**: L40s and H200 GPUs 
+    -   **lpinto**: stakeholder L40s GPUs
+    -   **mren**: stakeholder L40s GPUs    
+    -   **bpeher**: stakeholder H200 GPUs
   </TabItem>
 </Tabs>
 :::
