added credit for original tutorial

--- a/docs/hpc/13_tutorial_intro_hpc/01_intro_hpc.mdx
+++ b/docs/hpc/13_tutorial_intro_hpc/01_intro_hpc.mdx
@@ -14,3 +14,7 @@ By the end of this tutorial, participants will know how to:
 -   Submit and manage jobs on a cluster using a scheduler.
 -   Observe the benefits and limitations of parallel execution.
 :::
+
+:::info[Provenance]
+This tutorial was adapted for NYU's Greene HPC from [HPC Carpentry](https://github.com/hpc-carpentry)
+:::
